--- a/ceryx/static/500.html
+++ b/ceryx/static/500.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ceryx - Server Error</title>
+    <title>AimaCloud - Server Error</title>
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <style>
@@ -33,7 +33,7 @@
 </head>
 <body>
     <main>
-        <h1>Ceryx</h1>
+        <h1>AimaCloud</h1>
         <h2>Server Error</h2>
         <p>We are sorry, an unexpected error occured while servicing your request.</p>
     </main>
