--- a/ceryx/static/503.html
+++ b/ceryx/static/503.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ceryx - Service Not Available</title>
+    <title>AimaCloud - Service Not Available</title>
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <style>
@@ -33,7 +33,7 @@
 </head>
 <body>
     <main>
-        <h1>Ceryx</h1>
+        <h1>AimaCloud</h1>
         <h2>Service Not Available</h2>
         <p>The website you are trying to access, does not exist.</p>
     </main>
