support role and group

--- a/ceryx/static/500.html
+++ b/ceryx/static/500.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <main>
-        <h1>AimaCloud</h1>
+        <h1>服务出错了！</h1>
         <h2>Server Error</h2>
         <p>We are sorry, an unexpected error occured while servicing your request.</p>
     </main>
