--- a/ceryx/static/503.html
+++ b/ceryx/static/503.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <main>
-        <h1>AimaCloud</h1>
+        <h1>服务暂不可用</h1>
         <h2>Service Not Available</h2>
         <p>The website you are trying to access, does not exist.</p>
     </main>
